<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/main_btn_liner"
            android:text="@string/layout_liner"/>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/main_btn_table"
            android:text="@string/layout_table"/>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/main_btn_grid"
            android:text="@string/layout_grid"/>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/main_btn_relative"
            android:text="@string/layout_relative"/>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/main_btn_frame"
            android:text="@string/layout_frame"/>


</LinearLayout>