<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_main"
            tools:context=".activity.LinerActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/red"
                    android:textSize="25sp"
                    android:background="#DD4D4D">
            </TextView>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="2"
                    android:text="@string/green"
                    android:textSize="25sp"
                    android:background="#4DAC51">
            </TextView>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="3"
                    android:text="@string/blue"
                    android:textSize="25sp"
                    android:background="#1B1B71">
            </TextView>

        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="fitCenter"
                    android:padding="3dp"
                    android:src="@drawable/mcdd_01"
                    android:contentDescription="@string/mcdd_strange">
            </ImageView>

            <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="fitCenter"
                    android:padding="3dp"
                    android:src="@drawable/mcdd_02"
                    android:contentDescription="@string/mcdd_cb">
            </ImageView>

            <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="fitCenter"
                    android:padding="3dp"
                    android:src="@drawable/mcdd_03"
                    android:contentDescription="@string/mcdd_cbq">
            </ImageView>

            <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="fitCenter"
                    android:padding="3dp"
                    android:src="@drawable/mcdd_04"
                    android:contentDescription="@string/mcdd_rose">
            </ImageView>

        </LinearLayout>

    </LinearLayout>


</ScrollView>
